// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — 2 dims (no expand row) 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingVertical": 8,
    }
  }
  testID="bars"
>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-price"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Price
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 30,
            "marginVertical": 4,
            "textAlign": "center",
          },
          {
            "color": "#10B981",
          },
        ]
      }
      testID="bars-row-price-delta-hero"
    >
      13% less
    </Text>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-price-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "53.125%",
            },
          ]
        }
        testID="bars-row-price-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-price-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "46.875%",
            },
          ]
        }
        testID="bars-row-price-fill-b"
      />
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-a"
      >
        85
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-b"
      >
        75
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-reviews"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Reviews
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-reviews-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "52.38095238095239%",
            },
          ]
        }
        testID="bars-row-reviews-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-reviews-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "47.61904761904761%",
            },
          ]
        }
        testID="bars-row-reviews-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      0.5★ higher
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-a"
      >
        88
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-b"
      >
        80
      </Text>
    </View>
  </View>
</View>
`;

exports[`snapshot — 6 dims collapsed (hero state) 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingVertical": 8,
    }
  }
  testID="bars"
>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-price"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Price
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 30,
            "marginVertical": 4,
            "textAlign": "center",
          },
          {
            "color": "#10B981",
          },
        ]
      }
      testID="bars-row-price-delta-hero"
    >
      13% less
    </Text>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-price-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "53.125%",
            },
          ]
        }
        testID="bars-row-price-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-price-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "46.875%",
            },
          ]
        }
        testID="bars-row-price-fill-b"
      />
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-a"
      >
        85
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-b"
      >
        75
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-reviews"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Reviews
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-reviews-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "52.38095238095239%",
            },
          ]
        }
        testID="bars-row-reviews-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-reviews-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "47.61904761904761%",
            },
          ]
        }
        testID="bars-row-reviews-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      0.5★ higher
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-a"
      >
        88
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-b"
      >
        80
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-value"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Value
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 30,
            "marginVertical": 4,
            "textAlign": "center",
          },
          {
            "color": "#10B981",
          },
        ]
      }
      testID="bars-row-value-delta-hero"
    >
      Stronger value
    </Text>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-value-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "56.25%",
            },
          ]
        }
        testID="bars-row-value-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-value-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "43.75%",
            },
          ]
        }
        testID="bars-row-value-fill-b"
      />
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-value-score-a"
      >
        90
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-value-score-b"
      >
        70
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-performance"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Performance
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-performance-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "51.24999999999999%",
            },
          ]
        }
        testID="bars-row-performance-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-performance-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "48.75%",
            },
          ]
        }
        testID="bars-row-performance-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      4pt
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-performance-score-a"
      >
        82
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-performance-score-b"
      >
        78
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "expanded": false,
      }
    }
    accessible={true}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "center",
        "paddingVertical": 8,
      }
    }
    testID="bars-expand-row"
  >
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
        }
      }
    >
      results.dimensions.see_full_breakdown
    </Text>
    <mock-icon-ChevronDown
      color="#6B7280"
      size={16}
    />
  </View>
</View>
`;

exports[`snapshot — 6 dims expanded (all rows visible) 1`] = `
<View
  style={
    {
      "gap": 12,
      "paddingVertical": 8,
    }
  }
  testID="bars"
>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-price"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Price
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 30,
            "marginVertical": 4,
            "textAlign": "center",
          },
          {
            "color": "#10B981",
          },
        ]
      }
      testID="bars-row-price-delta-hero"
    >
      13% less
    </Text>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-price-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "53.125%",
            },
          ]
        }
        testID="bars-row-price-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-price-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "46.875%",
            },
          ]
        }
        testID="bars-row-price-fill-b"
      />
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-a"
      >
        85
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-price-score-b"
      >
        75
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-reviews"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Reviews
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-reviews-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "52.38095238095239%",
            },
          ]
        }
        testID="bars-row-reviews-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-reviews-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "47.61904761904761%",
            },
          ]
        }
        testID="bars-row-reviews-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      0.5★ higher
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-a"
      >
        88
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-reviews-score-b"
      >
        80
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-value"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Value
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 30,
            "marginVertical": 4,
            "textAlign": "center",
          },
          {
            "color": "#10B981",
          },
        ]
      }
      testID="bars-row-value-delta-hero"
    >
      Stronger value
    </Text>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-value-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "56.25%",
            },
          ]
        }
        testID="bars-row-value-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-value-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "43.75%",
            },
          ]
        }
        testID="bars-row-value-fill-b"
      />
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-value-score-a"
      >
        90
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-value-score-b"
      >
        70
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-performance"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Performance
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-performance-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "51.24999999999999%",
            },
          ]
        }
        testID="bars-row-performance-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-performance-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "48.75%",
            },
          ]
        }
        testID="bars-row-performance-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      4pt
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-performance-score-a"
      >
        82
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-performance-score-b"
      >
        78
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-build"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Build
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-build-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "51.28205128205128%",
            },
          ]
        }
        testID="bars-row-build-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-build-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "48.717948717948715%",
            },
          ]
        }
        testID="bars-row-build-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      4pt
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-build-score-a"
      >
        80
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-build-score-b"
      >
        76
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "gap": 4,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="bars-row-longevity"
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontWeight": "500",
          }
        }
      >
        Longevity
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="bars-row-longevity-bar"
    >
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#10B981",
              "flexBasis": "51.02040816326531%",
            },
          ]
        }
        testID="bars-row-longevity-fill-a"
      />
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "height": 8,
            "width": 2,
          }
        }
        testID="bars-row-longevity-bar-gap"
      />
      <View
        style={
          [
            {
              "borderRadius": 4,
              "flexGrow": 0,
              "flexShrink": 1,
              "height": 8,
            },
            {
              "backgroundColor": "#6B7280",
              "flexBasis": "48.97959183673469%",
            },
          ]
        }
        testID="bars-row-longevity-fill-b"
      />
    </View>
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
          "marginTop": 4,
        }
      }
    >
      3pt
    </Text>
    <View
      pointerEvents="none"
      style={
        {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-longevity-score-a"
      >
        75
      </Text>
      <Text
        style={
          {
            "color": "#0A0A0B",
            "fontSize": 13,
            "fontVariant": [
              "tabular-nums",
            ],
            "fontWeight": "400",
            "lineHeight": 19.5,
            "minWidth": 28,
            "textAlign": "center",
          }
        }
        testID="bars-row-longevity-score-b"
      >
        72
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "expanded": true,
      }
    }
    accessible={true}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "justifyContent": "center",
        "paddingVertical": 8,
      }
    }
    testID="bars-expand-row"
  >
    <Text
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 19.5,
        }
      }
    >
      results.dimensions.see_full_breakdown
    </Text>
    <mock-icon-ChevronUp
      color="#6B7280"
      size={16}
    />
  </View>
</View>
`;
